--- a/utilities/src/org/netbeans/modules/openfile/Bundle.properties
+++ b/utilities/src/org/netbeans/modules/openfile/Bundle.properties
@@ -81,7 +81,12 @@ LBL_packageWillBeDefault=<no package>
 LBL_dirWillBe=Will mount directory: {0}
 LBL_wizTitle=Select Package
 LBL_okButton=Mount
+ACS_LBL_okButton=Mount selected folder
 LBL_cancelButton=Cancel
+ACS_LBL_cancelButton=N/A
+ACSN_List=List of packages
+ACSD_List=Select an appropriate package in this list 
+ACS_Field=Selected package
 # easy dialog
 LBL_quickMountTitle=Confirm Package of File
 # {0} - (short) file name
@@ -92,7 +97,10 @@ MSG_quickMount=The IDE has guessed that {0} should be in the {1} package.\n\
 MSG_quickMountDefault=The IDE has guessed that {0} should be in the default package.\n\
         Is this correct or do you want to choose the package yourself?
 LBL_quickMountYes=Accept
+ACS_LBL_quickMountYes=N/A
 LBL_quickMountNo=Select ...
+ACS_LBL_quickMountNo=N/A
+LBL_quickMountNo_Mnem=S
 # {0} - port number
 MSG_cannotBind=\
 	The Open File server could not start on port {0} because it was already in use.\n\
