--- a/utilities/src/org/netbeans/modules/pdf/Bundle.properties
+++ b/utilities/src/org/netbeans/modules/pdf/Bundle.properties
@@ -25,6 +25,7 @@ TITLE_pick_a_viewer=PDF Viewer Not Found ...
 EXC_no_such_pdf=The {0} file does not exist.
 
 # ReconfigureReaderPanel
+ACS_Field=N/A
 LBL_select_viewer=Select
 LBL_reconfigure=\
     The IDE needs a PDF viewer application, such as Acrobat Reader. \
@@ -35,6 +36,7 @@ LBL_existing_exception=Details of the problem: {0}: {1}
 LBL_current_viewer=Current viewer:
 LBL_choose=Select ...
 LBL_choose_mnem=S
+ACS_LBL_choose=N/A
 
 # filenames
 Services/org-netbeans-modules-pdf-PDFSettings.settings=PDF Settings
