accessibility of beaninfo + addshortcut panel

--- a/o.n.core/src/org/netbeans/core/Bundle.properties
+++ b/o.n.core/src/org/netbeans/core/Bundle.properties
@@ -347,6 +347,10 @@ FMT_MainExplorerTitle=Explorer [{0}]
 CTL_MainExplorerTitle_No=Explorer
 CTL_MainExplorerTitle_Multiple=Explorer [Multiple Items Selected]
 CTL_ExplorerTitle=Explorer
+ACSN_ExplorerBeanTree=Tree in customizer
+ACSD_ExplorerBeanTree=Left part of Customizer dialog with tree view
+ACSN_ExplorerPropertySheetView=PropertySheetView
+ACSD_ExplorerPropertySheetView=Right part of Customizer dialog with tree view
 
 CTL_ToggleProperties=Toggle Property Sheet
 
@@ -431,6 +435,7 @@ ActionsPanel.ActionsTitle=Actions
 ActionsPanel.ShortcutsTitle=Edit Shortcuts
 ActionsPanel.AddShortcut=Add Shortcut
 ActionsPanel.ShortcutLabel=Shortcut:
+ActionsPanel.ShortcutLabel_Mnemonic=S
 ACS_ShortcutsPanel.shortcutTextArea.text.a11yName=Select View by Actions to Edit Shortcuts for an Action
 ACS_ShortcutsEditor.actionsButton.text.a11yDesc=Select View by Actions to Edit Shortcuts for an Action
 ACS_ShortcutsEditor.shortcutsButton.text.a11yDesc=Select View by Shortcuts, but for Edit Shortcuts should be View by Action selected
@@ -443,6 +448,7 @@ ACSN_ActionsPanel.shorcutsList=N/A
 ACSD_ActionsPanel.actionsTree=N/A
 ACSD_ActionsPanel.shorcutsList=N/A
 ACSD_ShortcutsEditor.DialogDesc=N/A
+ACSD_ActionsPanel.Dialog=Add new shortcut to the selected action
 
 # {0} = name of the action already bound to the new shortcut
 FMT_ActionsPanel.AlreadyBound=There is already an action bound to this shortcut ({0}).\nDo you want to use the newly selected action instead?
