JavaHelp support described in mf-layer instead of old way (manifest).

--- a/xml.core/src/org/netbeans/modules/xml/core/resources/Bundle.properties
+++ b/xml.core/src/org/netbeans/modules/xml/core/resources/Bundle.properties
@@ -22,3 +22,7 @@ Templates/XML/XMLwithROOT.xml=XML Document
 Templates/XML/XMLwithDTD.xml=XML with DTD
 Templates/XML/xhtml.xml=XHTML Document
 Templates/XML/StyleSheet.xml=Extensible Style Sheet
+
+## JavaHelp
+Menu/Help/HelpShortcuts/org-netbeans-modules-xml-core-docs-mainpage.xml=XML Support
+Actions/Help/org-netbeans-modules-xml-core-docs-mainpage.xml=XML Support
