--- a/utilities/src/org/netbeans/modules/search/Bundle.properties
+++ b/utilities/src/org/netbeans/modules/search/Bundle.properties
@@ -15,31 +15,49 @@ TEXT_LABEL_RE=Regular Expression:
 
 #buttons
 TEXT_BUTTON_APPLY=\ Use This Criterion for Search
+ACS_TEXT_BUTTON_APPLY=N/A
 TEXT_BUTTON_STOP=Stop Search
+ACS_TEXT_BUTTON_STOP=N/A
 TEXT_BUTTON_CUSTOMIZE=Modify Search
+ACS_TEXT_BUTTON_CUSTOMIZE=N/A
 TEXT_BUTTON_SEARCH=Search
+ACS_TEXT_BUTTON_SEARCH=N/A
 TEXT_BUTTON_CANCEL=Close
+ACS_TEXT_BUTTON_CANCEL=N/A
 TEXT_BUTTON_CANCEL_MNEM=C
 TEXT_BUTTON_HELP=Help
+ACS_TEXT_BUTTON_HELP=N/A
 TEXT_BUTTON_SORT=\ Sort by Name
+ACS_TEXT_BUTTON_SORT=N/A
 TEXT_BUTTON_UNSORT=\ Do Not Sort
+ACS_TEXT_BUTTON_UNSORT=N/A
 TEXT_BUTTON_FILL=Show All Details
+ACS_TEXT_BUTTON_FILL=N/A
 
 TEXT_LABEL_DETAILS=Details for:
 TEXT_TITLE_SEARCH_RESULTS=Search Results
 TEXT_LABEL_SEARCH_RESULTS=Search Results:
 
+ACSN_Tabs=Each tab contains different search criterion
+ACSD_Tabs=N/A
+ACS_SearchPanel=Panel which shows all enabled search types for user allowing to select appropriate criteria for new search.
+
 #CriteriaView texts
 TEXT_TITLE_CUSTOMIZE=Search Filesystems
 TEXT_LABEL_PREDEFINED=Predefined
 TEXT_BUTTON_SAVE_AS=Save Settings as...
+ACS_TEXT_BUTTON_SAVE_AS=N/A
 TEXT_BUTTON_RESTORE=Restore Saved...
+ACS_TEXT_BUTTON_RESTORE=N/A
 TEXT_DEFAULT_CRITERION=<default>
+ACS_RestorePanel=This dialog allows you to restore a criterion.
 
 TEXT_LABEL_NAME=Criterion Name:
 TEXT_LABEL_SELECT=Select Criterion:
+ACS_TEXT_LABEL_SELECT=N/A
 TEXT_LABEL_SAVE_CRITERION=Save Search Criterion
 TEXT_LABEL_RESTORE_CRITERION=Restore Search Criterion
+ACS_SaveAsPanel=This dialog allows you to save a criterion.
 
 # RemoveFromSearchAction
 TEXT_LABEL_RemoveFromSearchActionName=Remove From Search
@@ -81,7 +99,10 @@ TEXT_BUTTON_RESTORE_MNEM=R
 TEXT_BUTTON_SAVE_AS_MNEM=S
 TEXT_BUTTON_FILL_MNEM=D
 TEXT_BUTTON_SHOW=Show in Explorer
+ACS_TEXT_BUTTON_SHOW=N/A
 TEXT_BUTTON_SHOW_MNEM=E
+ACS_PackageName=N/A
+ACS_FileSystemName=N/A
 TEXT_LABEL_POSITION=Position within the file:
 TEXT_LABEL_POSITION_MNEM=P
 TEXT_LABEL_SEARCH_RESULTS_MNEM=R
@@ -92,6 +113,8 @@ TEXT_BUTTON_CUSTOMIZE_MNEM=M
 TEXT_BUTTON_HELP_MNEM=H
 TEXT_LABEL_SELECT_MNEM=S
 TEXT_LABEL_NAME_MNEM=N
+ACS_ListView=N/A
+ACS_TREEVIEW=N/A
 
 # filenames
 Services/SearchType/org-netbeans-modules-search-FullTextType.settings=Full Text
