--- a/o.apache.tools.ant.module/src/org/apache/tools/ant/module/wizards/shortcut/Bundle.properties
+++ b/o.apache.tools.ant.module/src/org/apache/tools/ant/module/wizards/shortcut/Bundle.properties
@@ -18,9 +18,13 @@
 TITLE_x_of_y={0} of {1}
 
 IP_LBL_add_toolbar_button=\ Add a toolbar button
+ACS_IP_LBL_add_toolbar_button=N/A
 IP_LBL_cust_code_checkbox=\ Customize generated Ant code
+ACS_IP_LBL_cust_code_checkbox=N/A
 IP_LBL_add_to_project=\ Add a link to project
+ACS_IP_LBL_add_to_project=N/A
 IP_LBL_add_menu_item=\ Add a menu item
+ACS_IP_LBL_add_menu_item=N/A
 STP_TEXT_choose_script_and_target=Choose a build script and target in it:
 STP_LBL_display_name=Display name of shortcut:
 STP_LBL_code_name=Simple file name of shortcut:
@@ -42,16 +46,25 @@ STP_LBL_select_target=Select Ant project and target
 SKSP_LBL_type_here=(type here)
 SKSP_LBL_select_shortcut_to_add=Select keyboard shortcut to add
 IP_LBL_add_kbd_shortcut=\ Add a keyboard shortcut
+ACS_IP_LBL_add_kbd_shortcut=N/A
 IP_TEXT_select_how_to_install_shortcut=Select how you will want the shortcut to be invoked, as well as whether or not you wish to customize the generated Ant mini-script.
 IP_LBL_cfg_basic_opts=\ Configure basic options
 CSP_TEXT_you_may_customize_gend2=You may customize the generated miniature Ant script. Its default target will be run when the shortcut is invoked. The project name may be used for display purposes, for example as the text of a menu item. A typical customization would be to add nested <property name=\"name\" value=\"value\"/> elements to <ant/>.
 CSP_LBL_cust_gend_ant_script=Customize generated Ant script
 STP_LBL_code_name_mnem=S
 STP_LBL_display_name_mnem=D
-ACS_TEXT_you_may_customize_gend2=This area contains Ant script code for customizing
-ACS_LBL_type_here=Type a key sequence here
+ACSN_TEXT_you_may_customize_gend2=This area contains Ant script code for customizing
+ACSD_TEXT_you_may_customize_gend2=N/A
+ACSN_LBL_type_here=Type a key sequence here
+ACSD_LBL_type_here=N/A
 IP_LBL_cust_code_checkbox_mnem=C
 IP_LBL_add_menu_item_mnem=m
 IP_LBL_add_to_project_mnem=l
 IP_LBL_add_kbd_shortcut_mnem=k
 IP_LBL_add_toolbar_button_mnem=t
+ACSN_explorer_tree=Select in this list
+ACSD_explorer_tree=N/A
+ACS_displayNameField=N/A
+ACS_codeNameField=N/A
+ACSN_treeView=Select in this list
+ACSD_treeView=N/A
