previous change caused problem; xtest was build when xtest.distexec was set and xtest.nobuildexec was not. Fixed: now when xtest.distexec is set then xtest.nobuildexec is automatically set too.

--- a/xtest/build.xml
+++ b/xtest/build.xml
@@ -202,9 +202,13 @@ Microsystems, Inc. All Rights Reserved.
                       targetParamTestAttributes="xtest.attributes"/>        
     </target>
 
-    <target name="buildxtest"
+    <target name="buildxtest" depends="setnobuildxtest"
             description="Builds XTest framework." unless="xtest.nobuildxtest">
         <ant antfile="xtest.xml"/>
+    </target>
+    
+    <target name="setnobuildxtest" if="xtest.distexec">
+	<property name="xtest.nobuildxtest" value="true"/>
     </target>
     
     <target name="cleanxtest"
