--- a/xtest/build.xml
+++ b/xtest/build.xml
@@ -66,7 +66,7 @@ Microsystems, Inc. All Rights Reserved.
         <echo message="You should provide target to execute, see 'ant -projecthelp'"/>
     </target>
     
-    <target name="runtests" depends="configuration"
+    <target name="runtests" depends="configuration,localresults-clean"
             description="Main target for running tests according to config and creating report.">
     
         <antcall target="executor">
@@ -129,6 +129,7 @@ Microsystems, Inc. All Rights Reserved.
             <param name="target.name" value="realclean-helper"/>
         </antcall>
         <antcall target="localresults-clean"/>
+        <antcall target="cleantestdist"/>
     </target>
     
     <target name="real-clean" depends="realclean"/>
@@ -220,7 +221,7 @@ Microsystems, Inc. All Rights Reserved.
         <delete dir="dist"/>
     </target>
     
-    <target name="localresults-clean" depends="cleantestdist">
+    <target name="localresults-clean">
         <delete dir="results"/>
     </target>
     
