--- a/form/src/org/netbeans/modules/form/actions/Bundle.properties
+++ b/form/src/org/netbeans/modules/form/actions/Bundle.properties
@@ -22,7 +22,7 @@ ACT_TestMode=Test Form
 ACT_ShowGrid=Show Grid
 ACT_FormEditor=&Form Editor
 ACT_InstallBean=Insta&ll New JavaBean...
-ACT_InstallToPalette=Add to Component &Palette...
+ACT_InstallToPalette=Add to Component Palette...
 ACT_InPlaceEdit=Edit Text
 ACT_EditContainer=Design This Container
 ACT_EditForm=Design Top Container
