accessibility of new locale dialog

--- a/properties/src/org/netbeans/modules/properties/Bundle.properties
+++ b/properties/src/org/netbeans/modules/properties/Bundle.properties
@@ -129,6 +129,7 @@ ACS_CTL_VariantCombo=N/A
 CTL_CountryCode=Country Code:
 CTL_LanguageCode=Language Code:
 CTL_Locale=Locale:
+CTL_LocaleLabel_Mnem=O
 CTL_NewFile=New File:
 CTL_SupportedLocales=Predefined Locales:
 CTL_Variant=Variant:
