accessibility of beanifo dialog

--- a/beans/src/org/netbeans/modules/beans/Bundle.properties
+++ b/beans/src/org/netbeans/modules/beans/Bundle.properties
@@ -98,6 +98,7 @@ CTL_IdxPropertyPanel_niSetterCheckBox_Mnemonic=S
 CTL_IdxPropertyPanel_niSetCheckBox=With Set Statement
 CTL_IdxPropertyPanel_niSetCheckBox_Mnemonic=H
 
+ACSD_IdxPropertyPanelDialog=Dialog for add new property of bean patterns
 ACS_IdxPropertyPanel_nameLabelA11yDesc=Property name.
 ACS_IdxPropertyPanel_nameTextFieldA11yName=Property name text field
 ACS_IdxPropertyPanel_nameTextFieldA11yDesc=Property name.
