accessibility of beanifo add dialogs...indexed property, unicast event, multicast event

--- a/beans/src/org/netbeans/modules/beans/Bundle.properties
+++ b/beans/src/org/netbeans/modules/beans/Bundle.properties
@@ -51,6 +51,7 @@ CTL_PropertyPanel_setCheckBox_Mnemonic=T
 CTL_PropertyPanel_supportCheckBox=Generate Property Change Support
 CTL_PropertyPanel_supportCheckBox_Mnemonic=P
 
+ACSD_PropertyPanelDialog=Dialog for add new property of bean patterns
 ACS_PropertyPanel_nameLabelA11yDesc=Property name.
 ACS_PropertyPanel_nameTextFieldA11yName=Property name text field
 ACS_PropertyPanel_nameTextFieldA11yDesc=Property name.
@@ -98,10 +99,10 @@ CTL_IdxPropertyPanel_niSetterCheckBox_Mnemonic=S
 CTL_IdxPropertyPanel_niSetCheckBox=With Set Statement
 CTL_IdxPropertyPanel_niSetCheckBox_Mnemonic=H
 
-ACSD_IdxPropertyPanelDialog=Dialog for add new property of bean patterns
 ACS_IdxPropertyPanel_nameLabelA11yDesc=Property name.
 ACS_IdxPropertyPanel_nameTextFieldA11yName=Property name text field
 ACS_IdxPropertyPanel_nameTextFieldA11yDesc=Property name.
+ACSD_IdxPropertyPanelDialog=Dialog for add new indexed property of bean patterns
 ACS_IdxPropertyPanel_typeLabelA11yDesc=Indexed type of this property.
 ACS_IdxPropertyPanel_typeComboBoxA11yName=Indexed type combo box
 ACS_IdxPropertyPanel_typeComboBoxA11yDesc=Combo box containing all available types.
@@ -136,6 +137,7 @@ CTL_EventSetPanel_fireCheckBox_Mnemonic=F
 CTL_EventSetPanel_passEventCheckBox=Pass Event as Parameter
 CTL_EventSetPanel_passEventCheckBox_Mnemonic=P
 
+ACSD_EventSetPanelDialog=Dialog for add new multicast event source by bean patterns
 ACS_EventSetPanel_typeLabelA11yDesc=Event type
 ACS_EventSetPanel_typeComboBoxA11yName=Event type combo box
 ACS_EventSetPanel_typeComboBoxA11yDesc=Combo box containing all event types.
@@ -161,6 +163,7 @@ CTL_UEventSetPanel_fireCheckBox_Mnemonic=F
 CTL_UEventSetPanel_passEventCheckBox=Pass Event as Parameter
 CTL_UEventSetPanel_passEventCheckBox_Mnemonic=P
 
+ACSD_UEventSetPanelDialog=Dialog for add new unicast event source by bean patterns
 ACS_UEventSetPanel_typeLabelA11yDesc=Event type
 ACS_UEventSetPanel_typeComboBoxA11yName=Event type combo box
 ACS_UEventSetPanel_typeComboBoxA11yDesc=Combo box containing all event types.
