modified capitalization for Options dialog items

--- a/o.n.core/src/org/netbeans/core/projects/Bundle.properties
+++ b/o.n.core/src/org/netbeans/core/projects/Bundle.properties
@@ -22,28 +22,28 @@ CTL_UserFile={0}
 
 #setting properties displayed in options dialog as setting definition status
 LBL_IndicatorProperty_Name=<<
-LBL_IndicatorProperty_Description=Origin of setting
+LBL_IndicatorProperty_Description=Origin of Setting
 LBL_IndicatorProperty_Name_Expanded=>>
-LBL_IndicatorProperty_Description_Expanded=Origin of setting
+LBL_IndicatorProperty_Description_Expanded=Origin of Setting
 LBL_FSP_Project-Layer=Project
-LBL_FSP_Desc_Project-Layer=Project settings layer
+LBL_FSP_Desc_Project-Layer=Project Settings Layer
 LBL_FSP_Session-Layer=User Dir
-LBL_FSP_Desc_Session-Layer=Session settings layer
+LBL_FSP_Desc_Session-Layer=Session Settings Layer
 LBL_FSP_Modules-Layer=Global
-LBL_FSP_Desc_Modules-Layer=Default installation settings layer
+LBL_FSP_Desc_Modules-Layer=Default Installation Settings Layer
 
 #actions available on cells in Options dialog
 LBL_action_define=Define Here
 LBL_action_revert=Revert Def.
 LBL_action_delete=Delete
 
-MSG_ask_remove_above_defined_files=Moving the Definition here will remove any values stored in Layers left of the selected column.\n\nDo you want to proceed?
+MSG_ask_remove_above_defined_files=Moving the definition here will remove any values stored in layers left of the selected column.\n\nDo you want to proceed?
 
 #file state tooltips
 LBL_fstate_defined=Setting Definition
 LBL_fstate_ignored=Unused Setting Value
 LBL_fstate_inherited=Setting Inherited
-LBL_fstate_undefined=Setting Value is not defined here
+LBL_fstate_undefined=Setting value is not defined here
 
 #settings category containing settings declared in manifest (older modules)
 LBL_uncategorized_folder=Uncategorized
