accessibility of exit dialog

--- a/o.n.core/src/org/netbeans/core/Bundle.properties
+++ b/o.n.core/src/org/netbeans/core/Bundle.properties
@@ -474,6 +474,14 @@ CTL_Exception_Hide_Details=Hide Details
 CTL_Exception_Show_Details=Show Details
 CTL_Title_Exception=Exception
 
+ACSN_ListOfChangedFiles=List
+ACSD_ListOfChangedFiles=List of changed files for save
+ACSD_SaveButton=N/A
+ACSD_SaveAllButton=N/A
+ACSD_DiscardAllButton=N/A
+ACSD_CancelButton=Cancel button for save changed files
+ACSD_ExitDialog=Dialog for save any changes
+
 LAB_EndTasks=End Tasks
 LAB_EndTasksMnem=E
 LAB_PendingTasks=Please wait while IDE finishes some tasks:
