--- a/httpserver/src/org/netbeans/modules/httpserver/Bundle.properties
+++ b/httpserver/src/org/netbeans/modules/httpserver/Bundle.properties
@@ -13,7 +13,7 @@
 OpenIDE-Module-Name=HTTP Server
 OpenIDE-Module-Display-Category=Web
 OpenIDE-Module-Short-Description=Provides infrastructure for testing applets, RMI applications, and so on.
-OpenIDE-Module-Long-Description=The HTTP Server module provides the infrastructure necessary for a variety of tasks, such as testing applets, testing RMI and JINI applications, and viewing Javadocs in the external web browser.
+OpenIDE-Module-Long-Description=The HTTP Server module provides the infrastructure necessary for a variety of tasks, such as testing applets, testing RMI and JINI applications, and viewing Javadoc documentation in the external web browser.
 
 CTL_HTTP_settings=HTTP Server
 CTL_Hosts=Hosts
@@ -40,11 +40,11 @@ PROP_Port=Port
 HINT_Port=Port number of the HTTP Server.
 # [not used currently:]
 PROP_Active=Running
-HINT_Active=If true, the HTTP Server is running; if false, it failed to start.
+HINT_Active=If True, the HTTP Server is running.  If False, the server failed to start.
 PROP_Running=Running
-HINT_Running=If true, the HTTP Server is running.
+HINT_Running=If True, the HTTP Server is running.
 PROP_RepositoryBase=Base Filesystems URL
-HINT_RepositoryBase=Starting URL for browsing the IDE Filesystems.
+HINT_RepositoryBase=Starting URL for browsing the IDE filesystems.
 PROP_ClasspathBase=Base Class Path URL
 HINT_ClasspathBase=Starting URL for the Java class path and resources hierarchy.
 # PROP_Granted=Grant Access To
@@ -69,12 +69,12 @@ MSG_ClassPathServletDescr=Servlet for handling IDE system class path requests
 MSG_BaseServletDescr=Base servlet for servlets which access IDE Open APIs
 MSG_RepositoryServletDescr=Servlet for handling IDE Filesystems requests
 MSG_onlyRootOnUnix=Only root can open port lower than 1024 on UNIX machines.
-HINT_JavadocBase=Starting URL for browsing the IDE Javadocs.
+HINT_JavadocBase=Starting URL for browsing the IDE Javadoc documentation.
 PROP_JavadocBase=Base Javadoc URL
-MSG_JavadocServletDescr=Servlet for handling IDE javadocs requests
+MSG_JavadocServletDescr=Servlet for handling IDE Javadoc requests
 
 #WrapperServlet.class
-MSG_WrapperServletDescr=Servlet for handling IDE javadocs requests
+MSG_WrapperServletDescr=Servlet for handling IDE Javadoc requests
 MSG_HTTP_NOT_FOUND=Cannot access requested resource.
 
 #HostPropertyCustomEditor.class
