Checked resource bundle for correct capitalization, punctuation, and wording of tool tips.

--- a/extbrowser/src/org/netbeans/modules/extbrowser/Bundle.properties
+++ b/extbrowser/src/org/netbeans/modules/extbrowser/Bundle.properties
@@ -12,13 +12,13 @@
 # module information
 OpenIDE-Module-Name=External HTML Browser
 OpenIDE-Module-Display-Category=Web
-OpenIDE-Module-Long-Description=The External Browser module enables the integration of external web browsers with the IDE for viewing JavaDoc documentation and testing applets and web (JSP and servlet) applications. It provides an alternative to using the built-in ICE Browser.
+OpenIDE-Module-Long-Description=The External Browser module enables the integration of external web browsers with the IDE for viewing Javadoc documentation and testing applets and web (JSP and servlet) applications. It provides an alternative to using the built-in HTML Browser.
 OpenIDE-Module-Short-Description=Enables integration of external web browsers with the IDE.
 
 # UnixBrowserImpl
 MSG_creating_new_window=Creating new window 
 MSG_Running_command=Running command {0}
-MSG_Cant_run_netscape=Cannot execute {0} and create new browser window. Check that a valid external browser property is set in Options | Web Browsers.
+MSG_Cant_run_netscape=Cannot execute {0} and create new browser window. Check that a valid external browser property is set.  In the Options window, expand IDE Configuration.  Then expand Server and External Tool Settings and select Web Browsers.
 MSG_look_for_win=Looking for created window
 MSG_err_code=error code returned :
  
@@ -32,32 +32,32 @@ CTL_ExternalBrowser=Platform dependent HTML browser
 
 #ExtWebBrowserBeanInfo
 PROP_Description=Browser Description
-HINT_Description=Description of HTML browser
+HINT_Description=Description of HTML browser.
 PROP_browserExecutable=Browser Executable
 HINT_browserExecutable=Command for executing the browser.
 CTL_ExtBrowserName=External HTML browser
 HINT_ExtBrowserName=External HTML browser
 
 #Simple browser
-HINT_SimpleExtBrowser=HTML browser which is brought up in a separate process every time a URL is selected for display from within the IDE.
+HINT_SimpleExtBrowser=HTML browser that is brought up in a separate process every time a URL is selected for display from within the IDE.
 CTL_SimpleExtBrowser=External Browser (Command Line)
 
-EXC_Invalid_Processor=Cannot create process. Check that a valid external browser property is set in Tools | Options | Web Browsers.
+EXC_Invalid_Processor=Cannot create process. Check that a valid external browser property is set.  In the Options window, expand IDE Configuration.  Then expand Server and External Tool Settings and select Web Browsers.
 MSG_BrowserExecutorHint={URL} = URL of the page to be loaded by the web browser\n
-MSG_use_win=reusing old window 
+MSG_use_win=Reusing old window 
 MSG_done=Done
 # Options API
 LBL_settings=External HTML Browser
 PROP_browser=Browser
-HINT_browser=Name of preferred browser
+HINT_browser=Name of preferred browser.
 PROP_start=Start Browser If Not Running
-HINT_start=Determines if browser should be started
+HINT_start=Determines if browser should be started.
 LBL_true=True
 LBL_false=False
 PROP_close=Close browser window
 HINT_close=
 ERR_not_installed=Cannot install external browser.
-ERR_cant_locate_dll=Unable to locate extbrowser.dll library. This library contains native code neceseary for using of external HTML browser on Windows platform.
+ERR_cant_locate_dll=Unable to locate extbrowser.dll library. This library contains native code neceseary for using the external HTML browser on Windows platform.
 ERR_cant_activate_browser=Error: Cannot activate browser
 
 #UnixWebBrowser
@@ -72,8 +72,7 @@ HINT_WinBrowserName=HTML browser using DDE communication (only for Windows).
 PROP_DDEServer=DDE Server
 HINT_DDEServer=Name of DDE server to communicate with.
 MSG_CannotUseBrowser=Browser cannot be used on this platform.
-MSG_win_browser_invocation_failed=Could not access the URL through the external browser. Check the configuration in Tools | Options | Web Browsers.
-
+MSG_win_browser_invocation_failed=Could not access the URL through the external browser. Check the configuration.  In the Options window, expand IDE Configuration.  Then expand Server and External Tool Settings and select Web Browsers.
 #BrowserPropertyEditor
 LBL_SystemDefaultBrowser=<Default System Browser>
 
