a11y related things in

--- a/image/src/org/netbeans/modules/image/Bundle.properties
+++ b/image/src/org/netbeans/modules/image/Bundle.properties
@@ -23,8 +23,6 @@ MSG_ExternalChange=The file {0} was modified externally. Reload it?
 LBL_ZoomIn=Zoom In
 LBL_ZoomOut=Zoom Out
 LBL_CustomZoom=Customize Zoom
-
-# CustomZoomPanel
 LBL_EnlargeFactor=Enlarge Factor:
 LBL_EnlargeFactor_Mnem=E
 LBL_DecreaseFactor=Decrease Factor:
@@ -40,3 +38,29 @@ OpenIDE-Module-Display-Category=Data Files
 OpenIDE-Module-Short-Description=Supports viewing of image files.
 OpenIDE-Module-Long-Description=The Image module provides support for viewing image files in the \
 IDE. It includes zoom and grid functions.
+
+ACS_ImageViewer=N/A
+
+ACS_Zoom_BTN=N/A
+
+ACSD_Toolbar=N/A
+
+ACSN_Toolbar=Zoom Toolbar
+
+ACS_Grid_BTN=N/A
+
+ACS_In_BTN_Mnem=I
+
+ACS_Grid_BTN_Mnem=Z
+
+ACS_Out_BTN_Mnem=O
+
+ACSD_Out_BTN=N/A
+
+ACSD_In_BTN=N/A
+
+ACSD_CustomZoomPanel=N/A
+
+ACS_EnlargeText=N/A
+
+ACS_DecreaseText=N/A
