--- a/form/src/org/netbeans/modules/form/Bundle.properties
+++ b/form/src/org/netbeans/modules/form/Bundle.properties
@@ -309,31 +309,34 @@ FMT_FormNodeName=Form {0}
 FMT_LayoutName={0}
 
 # formatting of a message that is displayed in the status line during setting layout
-# {0} = displayName of the container to set the layout on
-FMT_MSG_SetLayout=Set Layout on {0}.
+# {0} = class name of the layout
+# {1} = displayName of the container to set the layout on
+FMT_MSG_SetLayout=Set {0} on {1}.
 
 # formatting of a message that is displayed in the status line during setting layout
 # when the layout cannot be set
 # {0} = displayName of the container it is not possible to set the layout on
-FMT_MSG_CannotSetLayout=Cannot Set Layout on {0}.
+FMT_MSG_CannotSetLayout=Cannot set layout on {0}.
 
 # formatting of a message that is displayed in the status line during setting border
-# {0} = displayName of the component to set the border on
-FMT_MSG_SetBorder=Set Border on {0}.
+# {0} = class name of the border
+# {1} = displayName of the component to set the border on
+FMT_MSG_SetBorder=Set {0} on {1}.
 
 # formatting of a message that is displayed in the status line during setting border
 # {0} = displayName of the component, the border cannot be set on
-FMT_MSG_CannotSetBorder=Cannot Set Border on {0}.
+FMT_MSG_CannotSetBorder=Cannot set border on {0}.
 
-# formatting of a message that is displayed in the status line during adding a new component
-# {0} = string desription of the constraints to add the component to
-# {1} = display name of the container to add the component to
-# {2} = short class name (without package) of the component to add
-FMT_MSG_AddComponent=Add {2} to {1} ({0}).
+# formatting of a message that is displayed in the status line during adding
+# a new component to a container
+# {1} = short class name (without package) of the component to add
+# {2} = display name of the container to add the component to
+FMT_MSG_AddComponent=Add {0} to {1}.
 
-# formatting of a message that is displayed in the status line during adding a new nonvisual component
+# formatting of a message that is displayed in the status line during adding
+# a new component to "Other Components"
 # {0} = short class name (without package) of the component to add
-FMT_MSG_AddNonVisualComponent=Add {0} to the form (nonvisual).
+FMT_MSG_AddToOthers=Add {0} to Other Components.
 
 # resizing FormDesigner
 FMT_MSG_RESIZING_FORMDESIGNER=Resizing FormDesigner to size {0}, {1}.
