--- a/o.n.core/src/org/netbeans/core/Bundle.properties
+++ b/o.n.core/src/org/netbeans/core/Bundle.properties
@@ -492,6 +492,11 @@ LAB_FS_Configuration=Configuration
 
 LBL_savingSettings=Saving settings ...
 
+# FileSelector
+ACSD_FileSelectorDialog=File selector dialog
+ACSN_FileSelectorTreeView=Tree View
+ACSD_FileSelectorTreeView=Tree view in file selector
+
 # File names on system filesystem
 # Each key is resource path to a primary file
 # Value should give localized display name for data node
