Fixed bug #17034 - Add Atribute actions on #element: node and customizer have different default values.

--- a/xml.tax/src/org/netbeans/modules/xml/tax/beans/Bundle.properties
+++ b/xml.tax/src/org/netbeans/modules/xml/tax/beans/Bundle.properties
@@ -11,6 +11,6 @@
 
 
 ## Lib.java
-TEXT_new_attribute_name=attr
-TEXT_new_attribute_value=value
+TEXT_new_attribute_name=attribute
+TEXT_new_attribute_value=attribute value
 TITLE_new_attribute=New attribute
