Bugfix of #16108 Info dialog is shown before Go To Class feature

--- a/editor/src/org/netbeans/modules/editor/options/Bundle.properties
+++ b/editor/src/org/netbeans/modules/editor/options/Bundle.properties
@@ -54,6 +54,9 @@ HINT_completionAutoPopup=If True, the completion window automatically appears wh
 PROP_completionAutoPopupDelay=Delay of Completion Window Auto Popup
 HINT_completionAutoPopupDelay=How long to wait (in milliseconds) before automatically popping up the completion window.
 
+PROP_displayGoToClassInfo=Display Go To Class Info Window
+HINT_displayGoToClassInfo=If true, Info Window will be displayed before Go To Class feature
+
 PROP_expandTabs=Expand Tabs to Spaces
 HINT_expandTabs=If True, automatically converts tabs in the document to spaces padded to the same column.
 
