--- a/xml.tools/src/org/netbeans/modules/xml/tools/actions/Bundle.properties
+++ b/xml.tools/src/org/netbeans/modules/xml/tools/actions/Bundle.properties
@@ -43,3 +43,8 @@ MSG_parser_plug=Using JAXP parser at {0}.
 TITLE_XML_check_window=XML check
 
 MSG_too_many_errs=Too many errors, stopping further checking.
+
+MSG_platform_parser=Using Java platform XML parser (one in rt.jar).
+
+#{0} stays for class parser class name
+MSG_unknown_parser=Using {0} XML parser implementation from unknown location.
