Fixed home page of each module.

--- a/xml.catalog/build.xml
+++ b/xml.catalog/build.xml
@@ -22,7 +22,7 @@ Microsystems, Inc. All Rights Reserved.
     <property name="nbext_root" location="${nbroot}/nbbuild"/>
 
     <property name="license.file" location="${nbroot}/nbbuild/standard-nbm-license.txt"/>
-    <property name="homepage.base" value="netbeans.org"/>
+    <property name="homepage.base" value="http://xml.netbeans.org"/>
     <property name="dist.base" value="http://www.netbeans.org/download/nbms/40"/>
     <property name="storepass" value="?"/>
 
@@ -107,7 +107,7 @@ Microsystems, Inc. All Rights Reserved.
         <makenbm file="../xml-catalog.nbm"
                  topdir="."
                  module="netbeans/modules/xml-catalog.jar"
-                 homepage="http://${homepage.base}/xml-catalog.html"
+                 homepage="${homepage.base}/catalog/"
                  distribution="${dist.base}/xml-catalog.nbm">
             <license file="${license.file}"/>
             <signature keystore="${keystore}" storepass="${storepass}" alias="${nbm_alias}"/>
