--- a/xml.tax/build.xml
+++ b/xml.tax/build.xml
@@ -23,7 +23,7 @@ Microsystems, Inc. All Rights Reserved.
     <property name="parserimpl" value="${binroot}/xml/tax/release/modules/ext/xerces2.jar"/> <!-- parser implementation used internally by module -->
 
     <property name="license.file" location="${nbroot}/nbbuild/standard-nbm-license.txt"/>
-    <property name="homepage.base" value="netbeans.org"/>
+    <property name="homepage.base" value="http://xml.netbeans.org"/>
     <property name="dist.base" value="http://www.netbeans.org/download/nbms/40"/>
     <property name="storepass" value="?"/>
 
@@ -102,7 +102,7 @@ Microsystems, Inc. All Rights Reserved.
         <makenbm file="../xml-tax.nbm"
                  topdir="."
                  module="netbeans/modules/autoload/xml-tax.jar"
-                 homepage="http://${homepage.base}/xml-tax.html"
+                 homepage="${homepage.base}/tax/"
                  distribution="${dist.base}/xml-tax.nbm">
             <license file="${license.file}"/>
             <signature keystore="${keystore}" storepass="${storepass}" alias="${nbm_alias}"/>
