--- a/xml.tools/build.xml
+++ b/xml.tools/build.xml
@@ -25,7 +25,7 @@ Microsystems, Inc. All Rights Reserved.
     <property name="parserimpl" value="${binroot}/xml/tax/release/modules/ext/xerces2.jar"/> <!-- parser implementation used internally by module -->
 
     <property name="license.file" location="${nbroot}/nbbuild/standard-nbm-license.txt"/>
-    <property name="homepage.base" value="netbeans.org"/>
+    <property name="homepage.base" value="http://xml.netbeans.org"/>
     <property name="dist.base" value="http://www.netbeans.org/download/nbms/40"/>
     <property name="storepass" value="?"/>
 
@@ -108,7 +108,7 @@ Microsystems, Inc. All Rights Reserved.
         <makenbm file="../xml-tools.nbm"
                  topdir="."
                  module="netbeans/modules/xml-tools.jar"
-                 homepage="http://${homepage.base}/xml-tools.html"
+                 homepage="${homepage.base}/tools/"
                  distribution="${dist.base}/xml-tools.nbm">
             <license file="${license.file}"/>
             <signature keystore="${keystore}" storepass="${storepass}" alias="${nbm_alias}"/>
