Changing terminology in options categories to be better for user understanding user dir -> user; global -> default also changing layer -> level

--- a/o.n.core/src/org/netbeans/core/projects/Bundle.properties
+++ b/o.n.core/src/org/netbeans/core/projects/Bundle.properties
@@ -26,11 +26,11 @@ LBL_IndicatorProperty_Description=Origin of Setting
 LBL_IndicatorProperty_Name_Expanded=>>
 LBL_IndicatorProperty_Description_Expanded=Origin of Setting
 LBL_FSP_Project-Layer=Project
-LBL_FSP_Desc_Project-Layer=Project Settings Layer
-LBL_FSP_Session-Layer=User Dir
-LBL_FSP_Desc_Session-Layer=Session Settings Layer
-LBL_FSP_Modules-Layer=Global
-LBL_FSP_Desc_Modules-Layer=Default Installation Settings Layer
+LBL_FSP_Desc_Project-Layer=Project Settings Level
+LBL_FSP_Session-Layer=User
+LBL_FSP_Desc_Session-Layer=Session Settings Level
+LBL_FSP_Modules-Layer=Default
+LBL_FSP_Desc_Modules-Layer=Default Installation Settings Level
 
 #actions available on cells in Options dialog
 LBL_action_define=Define Here
