Fix of bug #8768 (a11y): action for adding components to containers from context menu.

--- a/form/src/org/netbeans/modules/form/actions/Bundle.properties
+++ b/form/src/org/netbeans/modules/form/actions/Bundle.properties
@@ -14,6 +14,7 @@
 
 
 # Form Actions
+ACT_Add=Add From Palette
 ACT_GotoEditor=Goto Source
 ACT_Events=Events
 ACT_CustomizeLayout=Customize Layout...
