--- a/xml.tools/build.xml
+++ b/xml.tools/build.xml
@@ -40,6 +40,7 @@ Microsystems, Inc. All Rights Reserved.
 
     <target name="init">
         <tstamp/>
+	<property name="release" value="dev"/>
         <property name="buildnumber" value="${DSTAMP}${TSTAMP}"/>
         <echo message="buildnumber = ${buildnumber}"/>
     </target>
@@ -105,11 +106,11 @@ Microsystems, Inc. All Rights Reserved.
 
     <target name="nbm" depends="netbeans">
         <delete dir="Info"/>
-        <makenbm file="../xml-tools.nbm"
+        <makenbm file="../xml-tools-${release}.nbm"
                  topdir="."
                  module="netbeans/modules/xml-tools.jar"
                  homepage="${homepage.base}/tools/"
-                 distribution="${dist.base}/xml-tools.nbm">
+                 distribution="${dist.base}/xml-tools-${release}.nbm">
             <license file="${license.file}"/>
             <signature keystore="${keystore}" storepass="${storepass}" alias="${nbm_alias}"/>
         </makenbm>
